--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body onload="start()">
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-        <h5 class="my-0 mr-md-auto font-weight-normal">METEO PREDICTION TP3</h5>
+        <h5 class="my-0 mr-md-auto font-weight-normal">METEO PREDICTION TP3 - Amara TD4</h5>
     </div>
 
     <div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
